// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationHeader should render default component 1`] = `
<header
  className="application-navbar"
  role="banner"
>
  <InjectIntl(ApplicationHeaderLayout)
    extensions={null}
    logo={null}
    navigation={null}
    toggle={null}
    utilities={null}
  />
</header>
`;

exports[`ApplicationHeader should render props 1`] = `
<header
  className="application-navbar"
  id="test-header"
  role="banner"
>
  <InjectIntl(ApplicationHeaderLayout)
    extensions={
      <ApplicationHeaderDefault
        layoutConfig={
          Object {
            "size": "large",
          }
        }
      />
    }
    logo={
      <ApplicationHeaderName
        title="app-test-title"
      />
    }
    navigation={
      <withRouter(ApplicationTabs)
        links={
          Array [
            Object {
              "id": "123",
              "path": "/something1",
              "text": "item 1",
            },
            Object {
              "id": "234",
              "path": "/something2",
              "text": "item 2",
            },
            Object {
              "id": "345",
              "path": "/something3",
              "text": "item 3",
            },
          ]
        }
      />
    }
    toggle={null}
    utilities={
      <ApplicationHeaderUtility
        data-application-header-utility={true}
        initialSelectedKey="test-menu"
        menuItems={
          Array [
            Object {
              "contentLocation": "body",
              "key": "test-menu",
              "title": "test-menu-title",
            },
          ]
        }
        menuRole="navigation"
        onChange={[Function]}
        onDisclose={[Function]}
        title="test-util-title"
      />
    }
  />
</header>
`;

exports[`ApplicationHeader with icons correctly applies the theme context className 1`] = `
<ContextProvider
  value={
    Object {
      "className": "orion-fusion-theme",
      "density": undefined,
      "name": undefined,
    }
  }
>
  <ApplicationHeader
    applicationLinks={Object {}}
    hasIcons={false}
    intl={
      Object {
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "now": [Function],
      }
    }
    layoutConfig={
      Object {
        "size": "large",
      }
    }
  />
</ContextProvider>
`;

exports[`ApplicationHeader with icons should match the snapshot 1`] = `
<header
  className="application-navbar"
  role="banner"
>
  <InjectIntl(ApplicationHeaderLayout)
    extensions={null}
    logo={null}
    navigation={
      <withRouter(ApplicationTabs)
        links={
          Array [
            Object {
              "icon": <IconFeatured
                data-name="Layer 1"
                viewBox="0 0 48 48"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "id": "123",
              "path": "/something1",
              "text": "item 1",
            },
            Object {
              "icon": <IconFeatured
                data-name="Layer 1"
                viewBox="0 0 48 48"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "id": "234",
              "path": "/something2",
              "text": "item 2",
            },
            Object {
              "icon": <IconFeatured
                data-name="Layer 1"
                viewBox="0 0 48 48"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "id": "345",
              "path": "/something3",
              "text": "item 3",
            },
          ]
        }
      />
    }
    toggle={null}
    utilities={null}
  />
</header>
`;
